--- a/test/averageT.ipynb
+++ b/test/averageT.ipynb
@@ -2,89 +2,95 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 329,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "#зенит, надир, перпенд1, перперн2, теневая, солнечная\n",
-    "As = [0.4] * 6 #\n",
-    "e = [0.2] * 6 #\n",
     "\n",
-    "qs = 1500\n",
+    "#средняя для куба\n",
+    "#средняя для параллепипида\n",
+    "#средняя для куба с нагрузкой\n",
+    "#средняя для параллепипида с нагрузкой\n",
     "\n",
-    "Lx = 1\n",
-    "Ly = 1\n",
-    "Lz = 1\n",
+    "As = np.array([0.5] * 6) #\n",
+    "e = np.array([0.6] * 6) #\n",
     "\n",
-    "externalHeatAverage = 0\n",
+    "qs = np.float64(1500)\n",
     "\n",
-    "orbitRadius = 500"
+    "Lx = np.float64(1)\n",
+    "Ly = np.float64(2)\n",
+    "Lz = np.float64(3)\n",
+    "\n",
+    "externalHeatAverage = np.float64(0)\n",
+    "\n",
+    "orbitRadius = np.float64(500)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 330,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [],
    "source": [
     "orbitRadius *= 1000\n",
-    "earthRaduius = 6371000\n",
+    "earthRaduius = np.float64(6371000)\n",
     "angleSunSet = np.arccos(earthRaduius/(earthRaduius+orbitRadius))\n",
     "sigma = np.float64(5.67*10**(-8))\n",
     "\n",
-    "areas = [Ly*Lz, Ly*Lz,\n",
-    "        Lx*Lz, Lx*Lz,\n",
-    "        Lx*Ly, Lx*Ly]\n",
+    "areas = np.array([Ly*Lz, Ly*Lz,\n",
+    "                Lx*Lz, Lx*Lz,\n",
+    "                Lx*Ly, Lx*Ly])\n",
     "summarHeat = 0\n",
     "summarHeat += areas[0] * As[0] #зенит\n",
     "summarHeat += areas[5] * As[5] #солнечная до 6 часов\n",
-    "summarHeat += np.sin(angleSunSet) * areas[2] * As[2] #надир после 6 часов\n",
+    "summarHeat += np.sin(angleSunSet) * areas[1] * As[1] #надир после 6 часов\n",
     "summarHeat += (1 - np.cos(angleSunSet)) * areas[5] * As[5] #после до 6 часов\n",
     "summarHeat *= qs/np.pi\n",
     "\n",
-    "summarHeat += (externalHeatAverage * (4+6+12))"
+    "summarHeat += externalHeatAverage"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 331,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [],
    "source": [
     "summarRadiation = 0\n",
     "\n",
     "for i in np.arange(len(areas)):\n",
-    "    summarRadiation += areas[i] * e[i]"
+    "    summarRadiation += areas[i] * e[i] * sigma"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 332,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [],
    "source": [
-    "averageT = (summarHeat/(summarRadiation*sigma))**(1/4)"
+    "averageT = (summarHeat/summarRadiation)**(0.25)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 333,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Средневитковое [количество тепла/c] : 1770.2511629108312\n",
-      "Суммарный коэффициент излучения: 4.400000000000001\n",
-      "Средняя температура: 290.23500305582144\n"
+      "Средневитковое [количество тепла/c] : 2481.0236600858693\n",
+      "Суммарный коэффициент излучения: 13.199999999999998\n",
+      "Средняя температура: 239.94874287894027\n"
      ]
     }
    ],
    "source": [
     "print(f\"Средневитковое [количество тепла/c] : {summarHeat}\")\n",
-    "print(f\"Суммарный коэффициент излучения: {summarRadiation}\")\n",
+    "print(f\"Суммарный коэффициент излучения: {summarRadiation/sigma}\")\n",
     "print(f\"Средняя температура: {averageT}\")"
    ]
   },
