--- a/test/averageT.ipynb
+++ b/test/averageT.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,23 +14,23 @@
     "#средняя для куба с нагрузкой\n",
     "#средняя для параллепипида с нагрузкой\n",
     "\n",
-    "As = np.array([0.9] * 6) #\n",
-    "e = np.array([0.91] * 6) #\n",
+    "As = np.array([0.4] * 6) #\n",
+    "e = np.array([0.2] * 6) #\n",
     "\n",
     "qs = np.float64(1500)\n",
     "\n",
     "Lx = np.float64(1)\n",
-    "Ly = np.float64(1)\n",
-    "Lz = np.float64(1)\n",
+    "Ly = np.float64(2)\n",
+    "Lz = np.float64(3)\n",
     "\n",
-    "externalHeatAverage = np.float64(0)\n",
+    "externalHeatAverage = np.float64(500*6)\n",
     "\n",
     "orbitRadius = np.float64(500)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,16 +75,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Средневитковое [количество тепла/c] : 2481.0236600858693\n",
-      "Суммарный коэффициент излучения: 13.199999999999998\n",
-      "Средняя температура: 239.94874287894027\n"
+      "Средневитковое [количество тепла/c] : 4984.818928068696\n",
+      "Суммарный коэффициент излучения: 4.4\n",
+      "Средняя температура: 375.97019097191054\n"
      ]
     }
    ],
