finally fixed finite volumes

--- a/test/heating.ipynb
+++ b/test/heating.ipynb
@@ -2,31 +2,32 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[226.726, 226.726, 226.726]"
+       "[1138.3333333333335, 1971.6666666666667, 2805.0]"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "t = 5668.15\n",
+    "t = 5000\n",
     "\n",
     "p = 1000\n",
     "c = 1000\n",
-    "S = [1, 1, 1]\n",
-    "l = 0.005\n",
-    "Q = 200\n",
+    "S = [6, 3, 2]\n",
+    "l = 0.001\n",
+    "Q = 1000\n",
+    "T0 = 305\n",
     "dT = []\n",
     "for s in S:\n",
-    "    dT.append(Q*t/(p*c*l*s))\n",
+    "    dT.append(Q*t/(p*c*l*s)+T0)\n",
     "\n",
     "dT"
    ]
