--- a/test/averageT.ipynb
+++ b/test/averageT.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,23 +14,23 @@
     "#средняя для куба с нагрузкой\n",
     "#средняя для параллепипида с нагрузкой\n",
     "\n",
-    "As = np.array([0.3] * 6) #\n",
-    "e = np.array([0.3] * 6) #\n",
+    "As = np.array([0.9] * 6) #\n",
+    "e = np.array([0.5] * 6) #\n",
     "\n",
     "qs = np.float64(1500)\n",
     "\n",
     "Lx = np.float64(1)\n",
-    "Ly = np.float64(1)\n",
-    "Lz = np.float64(1)\n",
+    "Ly = np.float64(2)\n",
+    "Lz = np.float64(3)\n",
     "\n",
-    "externalHeatAverage = np.float64(1000 * 6)\n",
+    "externalHeatAverage = np.float64(500 * 6)\n",
     "\n",
     "orbitRadius = np.float64(500)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,24 +75,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Средневитковое [количество тепла/c] : 6350.544317881417\n",
-      "Суммарный коэффициент излучения: 1.7999999999999996\n",
-      "Средняя температура: 499.44635364902814\n"
+      "Средневитковое [количество теплоты/c] : 7465.8425881545645\n",
+      "Суммарный коэффициент излучения: 11.000000000000002\n",
+      "Средняя температура: 330.76973948939604\n"
      ]
     }
    ],
    "source": [
-    "print(f\"Средневитковое [количество тепла/c] : {summarHeat}\")\n",
+    "print(f\"Средневитковое [количество теплоты/c] : {summarHeat}\")\n",
     "print(f\"Суммарный коэффициент излучения: {summarRadiation/sigma}\")\n",
     "print(f\"Средняя температура: {averageT}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
