add stabilization graph

--- a/test/averageT.ipynb
+++ b/test/averageT.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,14 +23,14 @@
     "Ly = np.float64(2)\n",
     "Lz = np.float64(3)\n",
     "\n",
-    "externalHeatAverage = np.float64(500 * 6)\n",
+    "externalHeatAverage = np.float64(500)\n",
     "\n",
     "orbitRadius = np.float64(500)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,16 +75,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Средневитковое [количество теплоты/c] : 7465.8425881545645\n",
+      "Средневитковое [количество теплоты/c] : 4965.8425881545645\n",
       "Суммарный коэффициент излучения: 11.000000000000002\n",
-      "Средняя температура: 330.76973948939604\n"
+      "Средняя температура: 298.7131221924365\n"
      ]
     }
    ],
