Fixed parent coat in conditions

--- a/test/averageT.ipynb
+++ b/test/averageT.ipynb
@@ -2,35 +2,30 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "#зенит, надир, перпенд1, перперн2, теневая, солнечная\n",
     "\n",
-    "#средняя для куба\n",
-    "#средняя для параллепипида\n",
-    "#средняя для куба с нагрузкой\n",
-    "#средняя для параллепипида с нагрузкой\n",
+    "As = np.array([0.3, 0.4, 0.4, 0.4, 0.4, 0.3]) #\n",
+    "e = np.array([0.9, 0.1, 0.1, 0.1, 0.1, 0.9]) #\n",
     "\n",
-    "As = np.array([0.9] * 6) #\n",
-    "e = np.array([0.5] * 6) #\n",
-    "\n",
-    "qs = np.float64(1500)\n",
+    "qs = np.float64(1367)\n",
     "\n",
     "Lx = np.float64(1)\n",
-    "Ly = np.float64(2)\n",
-    "Lz = np.float64(3)\n",
+    "Ly = np.float64(1)\n",
+    "Lz = np.float64(1)\n",
     "\n",
-    "externalHeatAverage = np.float64(500)\n",
+    "externalHeatAverage = np.float64(300*1000/5668) + np.float64(300)\n",
     "\n",
     "orbitRadius = np.float64(500)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,23 +70,110 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Средневитковое [количество теплоты/c] : 4965.8425881545645\n",
-      "Суммарный коэффициент излучения: 11.000000000000002\n",
-      "Средняя температура: 298.7131221924365\n"
+      "Средневитковое [количество теплоты/c] : 688.6866740700248\n",
+      "Суммарный коэффициент излучения: 2.1999999999999997\n",
+      "Средняя температура: 272.5862750557949\n",
+      "Угол захода: 0.38384819529001624\n"
      ]
     }
    ],
    "source": [
     "print(f\"Средневитковое [количество теплоты/c] : {summarHeat}\")\n",
     "print(f\"Суммарный коэффициент излучения: {summarRadiation/sigma}\")\n",
-    "print(f\"Средняя температура: {averageT}\")"
+    "print(f\"Средняя температура: {averageT}\")\n",
+    "print(f\"Угол захода: {angleSunSet}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dA:-737400.4425333213\n",
+      "Ночной перепад от среднего: -11.379636458847552\n",
+      "Ожидаемый минимум:261.20663859694736\n"
+     ]
+    }
+   ],
+   "source": [
+    "orbitPeriod = 5668\n",
+    "width = 0.005\n",
+    "p = 2700\n",
+    "cp = 800\n",
+    "mass = np.sum(areas) * width * p\n",
+    "\n",
+    "\n",
+    "tNight = orbitPeriod * (np.pi/2 - angleSunSet)/(2*np.pi)\n",
+    "deltaA = -summarHeat*tNight\n",
+    "\n",
+    "dT = deltaA/(mass*cp)\n",
+    "print(f\"dA:{deltaA}\")\n",
+    "print(f\"Ночной перепад от среднего: {dT}\")\n",
+    "print(f\"Ожидаемый минимум:{averageT+dT}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dA:1437085.044248588\n",
+      "Дневной перепад от среднего: 22.177238337169566\n",
+      "Ожидаемый максимум:294.76351339296446\n"
+     ]
+    }
+   ],
+   "source": [
+    "tDay = orbitPeriod * (np.pi/2+angleSunSet)/(2*np.pi)\n",
+    "\n",
+    "heat = qs * 1.1\n",
+    "\n",
+    "deltaAday = (heat-summarHeat)*tDay\n",
+    "dTday = deltaAday/(mass*cp)\n",
+    "print(f\"dA:{deltaAday}\")\n",
+    "print(f\"Дневной перепад от среднего: {dTday}\")\n",
+    "print(f\"Ожидаемый максимум:{averageT+dTday}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "17.206995770524312"
+      ]
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tOver = 1000\n",
+    "\n",
+    "heat = qs * 1.1 + 300\n",
+    "deltaAover = (heat-summarHeat)*tOver\n",
+    "dTover = deltaAover/(mass*cp)\n",
+    "\n",
+    "dTover"
    ]
   },
   {
