--- a/test/averageT1.ipynb
+++ b/test/averageT1.ipynb
@@ -9,8 +9,8 @@
     "import numpy as np\n",
     "#зенит, надир, перпенд1, перперн2, теневая, солнечная\n",
     "\n",
-    "As = np.array([0.3, 0.4, 0.4, 0.4, 0.4, 0.3]) #\n",
-    "e = np.array([0.9, 0.1, 0.1, 0.1, 0.1, 0.9]) #\n",
+    "As = np.array([0.9] * 6) #\n",
+    "e = np.array([0.5] * 6) #\n",
     "\n",
     "qs = np.float64(1367)\n",
     "\n",
@@ -18,7 +18,7 @@
     "Ly = np.float64(1)\n",
     "Lz = np.float64(1)\n",
     "\n",
-    "externalHeatAverage = np.float64(300*1000/5668) + np.float64(300)\n",
+    "externalHeatAverage = 0\n",
     "\n",
     "orbitRadius = np.float64(500)"
    ]
@@ -77,9 +77,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Средневитковое [количество теплоты/c] : 688.6866740700248\n",
-      "Суммарный коэффициент излучения: 2.1999999999999997\n",
-      "Средняя температура: 272.5862750557949\n",
+      "Средневитковое [количество теплоты/c] : 958.3881650877944\n",
+      "Суммарный коэффициент излучения: 3.0000000000000004\n",
+      "Средняя температура: 273.97395689814215\n",
       "Угол захода: 0.38384819529001624\n"
      ]
     }
@@ -100,9 +100,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "dA:-737400.4425333213\n",
-      "Ночной перепад от среднего: -11.379636458847552\n",
-      "Ожидаемый минимум:261.20663859694736\n"
+      "dA:-1026179.0791999259\n",
+      "Ночной перепад от среднего: -15.836096901233423\n",
+      "Ожидаемый минимум:258.13785999690873\n"
      ]
     }
    ],
@@ -125,23 +125,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "dA:1196046.6227913408\n",
-      "Дневной перепад от среднего: 18.457509610977482\n",
-      "Ожидаемый максимум:291.04378466677235\n"
+      "dA:961529.6553708332\n",
+      "Дневной перепад от среднего: 14.838420607574587\n",
+      "Ожидаемый максимум:288.8123775057167\n"
      ]
     }
    ],
    "source": [
     "tDay = orbitPeriod * (np.pi/2+angleSunSet)/(2*np.pi)\n",
     "\n",
-    "heat = qs\n",
+    "heat = qs * 1.1\n",
     "\n",
     "deltaAday = (heat-summarHeat)*tDay\n",
     "dTday = deltaAday/(mass*cp)\n",
@@ -149,39 +149,6 @@
     "print(f\"Дневной перепад от среднего: {dTday}\")\n",
     "print(f\"Ожидаемый максимум:{averageT+dTday}\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "289.7932708263192"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "tOver = 1000\n",
-    "\n",
-    "heat = qs * 1.1 + 300\n",
-    "deltaAover = (heat-summarHeat)*tOver\n",
-    "dTover = deltaAover/(mass*cp)\n",
-    "\n",
-    "averageT+dTover\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
