--- a/test/averageT.ipynb
+++ b/test/averageT.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,14 +18,14 @@
     "Ly = np.float64(1)\n",
     "Lz = np.float64(1)\n",
     "\n",
-    "externalHeatAverage = np.float64(300*1000/5668) + np.float64(300)\n",
+    "externalHeatAverage = np.float64(300*1000/5668)\n",
     "\n",
-    "orbitRadius = np.float64(500)"
+    "orbitRadius = np.float64(500)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,42 +44,42 @@
     "summarHeat += (1 - np.cos(angleSunSet)) * areas[5] * As[5] #после до 6 часов\n",
     "summarHeat *= qs/np.pi\n",
     "\n",
-    "summarHeat += externalHeatAverage"
+    "summarHeat += externalHeatAverage\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "summarRadiation = 0\n",
     "\n",
     "for i in np.arange(len(areas)):\n",
-    "    summarRadiation += areas[i] * e[i] * sigma"
+    "    summarRadiation += areas[i] * e[i] * sigma\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "averageT = (summarHeat/summarRadiation)**(0.25)"
+    "averageT = (summarHeat/summarRadiation)**(0.25)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Средневитковое [количество теплоты/c] : 688.6866740700248\n",
+      "Средневитковое [количество теплоты/c] : 388.6866740700247\n",
       "Суммарный коэффициент излучения: 2.1999999999999997\n",
-      "Средняя температура: 272.5862750557949\n",
+      "Средняя температура: 236.26450349569086\n",
       "Угол захода: 0.38384819529001624\n"
      ]
     }
@@ -88,12 +88,12 @@
     "print(f\"Средневитковое [количество теплоты/c] : {summarHeat}\")\n",
     "print(f\"Суммарный коэффициент излучения: {summarRadiation/sigma}\")\n",
     "print(f\"Средняя температура: {averageT}\")\n",
-    "print(f\"Угол захода: {angleSunSet}\")"
+    "print(f\"Угол захода: {angleSunSet}\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -120,7 +120,34 @@
     "dT = deltaA/(mass*cp)\n",
     "print(f\"dA:{deltaA}\")\n",
     "print(f\"Ночной перепад от среднего: {dT}\")\n",
-    "print(f\"Ожидаемый минимум:{averageT+dT}\")"
+    "print(f\"Ожидаемый минимум:{averageT+dT}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dA:607168.7958905644\n",
+      "Дневной перепад от среднего: 9.369888825471673\n",
+      "Ожидаемый максимум:281.95616388126655\n"
+     ]
+    }
+   ],
+   "source": [
+    "tDay = orbitPeriod * (np.pi/2+angleSunSet)/(2*np.pi)\n",
+    "\n",
+    "heat = summarHeat * 1.5\n",
+    "\n",
+    "deltaAday = (heat-summarHeat)*tDay\n",
+    "dTday = deltaAday/(mass*cp)\n",
+    "print(f\"dA:{deltaAday}\")\n",
+    "print(f\"Дневной перепад от среднего: {dTday}\")\n",
+    "print(f\"Ожидаемый максимум:{averageT+dTday}\")\n"
    ]
   },
   {
@@ -129,39 +156,12 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "dA:1196046.6227913408\n",
-      "Дневной перепад от среднего: 18.457509610977482\n",
-      "Ожидаемый максимум:291.04378466677235\n"
-     ]
-    }
-   ],
-   "source": [
-    "tDay = orbitPeriod * (np.pi/2+angleSunSet)/(2*np.pi)\n",
-    "\n",
-    "heat = qs\n",
-    "\n",
-    "deltaAday = (heat-summarHeat)*tDay\n",
-    "dTday = deltaAday/(mass*cp)\n",
-    "print(f\"dA:{deltaAday}\")\n",
-    "print(f\"Дневной перепад от среднего: {dTday}\")\n",
-    "print(f\"Ожидаемый максимум:{averageT+dTday}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
      "data": {
       "text/plain": [
-       "289.7932708263192"
+       "282.5298450717673"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -169,7 +169,7 @@
    "source": [
     "tOver = 1000\n",
     "\n",
-    "heat = qs * 1.1 + 300\n",
+    "heat = summarHeat * 1.5 + 300\n",
     "deltaAover = (heat-summarHeat)*tOver\n",
     "dTover = deltaAover/(mass*cp)\n",
     "\n",
