--- a/test/averageT1.ipynb
+++ b/test/averageT1.ipynb
@@ -2,15 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "#зенит, надир, перпенд1, перперн2, теневая, солнечная\n",
     "\n",
-    "As = np.array([0.9] * 6) #\n",
-    "e = np.array([0.5] * 6) #\n",
+    "As = np.array([0.6] * 6) #\n",
+    "e = np.array([0.4] * 6) #\n",
     "\n",
     "qs = np.float64(1367)\n",
     "\n",
@@ -20,12 +20,12 @@
     "\n",
     "externalHeatAverage = 0\n",
     "\n",
-    "orbitRadius = np.float64(500)"
+    "orbitRadius = np.float64(500)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,42 +44,54 @@
     "summarHeat += (1 - np.cos(angleSunSet)) * areas[5] * As[5] #после до 6 часов\n",
     "summarHeat *= qs/np.pi\n",
     "\n",
-    "summarHeat += externalHeatAverage"
+    "summarHeat += externalHeatAverage\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'areas' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m summarRadiation \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0\u001b[39m\n\u001b[1;32m----> 3\u001b[0m \u001b[43mareas\u001b[49m[:] \u001b[38;5;241m*\u001b[39m e[:] \u001b[38;5;241m*\u001b[39m sigma\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'areas' is not defined"
+     ]
+    }
+   ],
    "source": [
     "summarRadiation = 0\n",
     "\n",
     "for i in np.arange(len(areas)):\n",
-    "    summarRadiation += areas[i] * e[i] * sigma"
+    "    summarRadiation += areas[i] * e[i] * sigma\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
-    "averageT = (summarHeat/summarRadiation)**(0.25)"
+    "averageT = (summarHeat/summarRadiation)**(0.25)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Средневитковое [количество теплоты/c] : 958.3881650877944\n",
-      "Суммарный коэффициент излучения: 3.0000000000000004\n",
-      "Средняя температура: 273.97395689814215\n",
+      "Средневитковое [количество теплоты/c] : 638.9254433918628\n",
+      "Суммарный коэффициент излучения: 2.4000000000000004\n",
+      "Средняя температура: 261.7664423700398\n",
       "Угол захода: 0.38384819529001624\n"
      ]
     }
@@ -88,21 +100,21 @@
     "print(f\"Средневитковое [количество теплоты/c] : {summarHeat}\")\n",
     "print(f\"Суммарный коэффициент излучения: {summarRadiation/sigma}\")\n",
     "print(f\"Средняя температура: {averageT}\")\n",
-    "print(f\"Угол захода: {angleSunSet}\")"
+    "print(f\"Угол захода: {angleSunSet}\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "dA:-1026179.0791999259\n",
-      "Ночной перепад от среднего: -15.836096901233423\n",
-      "Ожидаемый минимум:258.13785999690873\n"
+      "dA:-684119.3861332837\n",
+      "Ночной перепад от среднего: -10.557397934155613\n",
+      "Ожидаемый минимум:251.20904443588418\n"
      ]
     }
    ],
@@ -120,21 +132,21 @@
     "dT = deltaA/(mass*cp)\n",
     "print(f\"dA:{deltaA}\")\n",
     "print(f\"Ночной перепад от среднего: {dT}\")\n",
-    "print(f\"Ожидаемый минимум:{averageT+dT}\")"
+    "print(f\"Ожидаемый минимум:{averageT+dT}\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "dA:961529.6553708332\n",
-      "Дневной перепад от среднего: 14.838420607574587\n",
-      "Ожидаемый максимум:288.8123775057167\n"
+      "dA:1524827.3155904613\n",
+      "Дневной перепад от среднего: 23.5312857344207\n",
+      "Ожидаемый максимум:285.2977281044605\n"
      ]
     }
    ],
@@ -147,7 +159,7 @@
     "dTday = deltaAday/(mass*cp)\n",
     "print(f\"dA:{deltaAday}\")\n",
     "print(f\"Дневной перепад от среднего: {dTday}\")\n",
-    "print(f\"Ожидаемый максимум:{averageT+dTday}\")"
+    "print(f\"Ожидаемый максимум:{averageT+dTday}\")\n"
    ]
   }
  ],
