--- a/test/withR.ipynb
+++ b/test/withR.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,8 +20,8 @@
     "earth_mass = np.float64(5.976 * 10**24)\n",
     "G = np.float64(6.67 * 10**(-11))\n",
     "\n",
-    "As = np.array([0.8] * 6) #\n",
-    "e = np.array([0.2] * 6) #\n",
+    "As = np.array([0.6] * 6) #\n",
+    "e = np.array([0.4] * 6) #\n",
     "qs = np.float64(1367)\n",
     "generationHeat = np.array([50] * 6)\n",
     "\n",
@@ -39,17 +39,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([398.10369153, 180.36183776,  50.        ,  50.        ,\n",
-       "        50.        , 423.43506189])"
+       "array([311.07776865, 147.77137832,  50.        ,  50.        ,\n",
+       "        50.        , 330.07629642])"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -77,17 +77,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([823.29197591, 823.29197591,  50.        ,  50.        ,\n",
-       "        50.        , 823.29197591])"
+       "array([629.96898193, 629.96898193,  50.        ,  50.        ,\n",
+       "        50.        , 629.96898193])"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -104,16 +104,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "360.713730572187"
+       "288.2101037950334"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -142,7 +142,7 @@
        "       [2.e+00, 2.e+00, 2.e+00, 2.e+00, 1.e+24, 1.e+24]])"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -168,7 +168,7 @@
        "array([13.5, 13.5, 13.5, 13.5, 13.5, 13.5])"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -214,7 +214,7 @@
        "        5.0000000e-25, 6.0002166e+00]])"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -228,17 +228,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([4.25266416e+02, 6.43008269e+02, 7.81311704e-02, 7.81311704e-02,\n",
-       "       7.81311704e-02, 3.99935045e+02])"
+       "array([3.18953640e+02, 4.82260030e+02, 6.24267690e-02, 6.24267690e-02,\n",
+       "       6.24267690e-02, 2.99955112e+02])"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -250,17 +250,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([430.14660617, 466.43560508, 351.19325477, 351.19325477,\n",
-       "       354.22224517, 420.86265844])"
+       "array([340.28530739, 367.50205657, 281.07029384, 281.07029384,\n",
+       "       283.34203664, 333.32234659])"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from scipy import linalg\n",
+    "linalg.solve(m, d) + Tav\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([50, 50, 50, 50, 50, 50])"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Qex = generationHeat\n",
+    "Qex\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tNight = period - tDay\n",
+    "\n",
+    "m = 1/2/R\n",
+    "for i in range(6):\n",
+    "    m[i][i] = np.sum(1/R/2) + c*mass[i]/tNight\n",
+    "\n",
+    "d = Qex[:] - Qav[:] + Tav*c*mass[:]/tNight\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([246.13215207, 273.3494401 , 292.36286566, 292.36286566,\n",
+       "       290.24114786, 243.56252607])"
+      ]
+     },
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
